add AoC-Initializer, requires java-21+preview